force-app/main/default/objects/SM_QuestionSetQuestion__c/SM_QuestionSetQuestion__c.object-meta.xml
<CustomObject>
    <label>Question Set Question</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Set Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>