force-app/main/default/objects/SM_QuestionSetQuestion__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>SM_QuestionSetGroup__c</referenceTo>
    <relationshipLabel>Question Set Questions</relationshipLabel>
    <relationshipName>Question_Set_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>