force-app/main/default/objects/SM_QuestionSetQuestion__c/fields/Overview4x4_Y__c.field-meta.xml
<CustomField>
    <fullName>Overview4x4_Y__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overview4x4 Y</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>