force-app/main/default/objects/SM_QuestionSetQuestion__c/fields/QuestionSet__c.field-meta.xml
<CustomField>
    <fullName>QuestionSet__c</fullName>
    <label>Question Set</label>
    <referenceTo>SM_QuestionSet__c</referenceTo>
    <relationshipLabel>Question Set Questions</relationshipLabel>
    <relationshipName>Question_Set_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>